<resources>
    <string name="app_name">ChatDev</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_under_line"><u>Sign In</u></string>
    <string name="user_list">ALL USER IN SYSTEM</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
</resources>